# goit-ds-hw-03

./: delete.py  main.py  pyproject.toml  read.py  update.py
